--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,13 @@
+.header {
+    background-color: var(--primary-color);
+    color: #fff;
+    text-align: center;
+    padding: 40px 20px;
+    position: relative;
+    font-weight: bold;
+    height: 300px;
+}
+
 .welcome-text {
     margin-top: -30px;
     padding: 0;
@@ -62,7 +72,4 @@
     left: 50%;
     transform: translate(-50%, -50%);
     top: 380px;
-    /*--color: #f7f5f8ab;
-    background-image: linear-gradient(90deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%, transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%, transparent);
-    background-size: 200px 200px;*/
 }
