--- a/css/sections.css
+++ b/css/sections.css
@@ -3,32 +3,28 @@
 .sections {
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 70px;
     margin: 0 auto;
-    padding: 50px 50px;
+    padding: 5%;
 }
 
 section {
-    margin-bottom: 25px;
     position: relative;
     overflow: hidden;
 }
 
 .section-title {
     font-size: 40px;
-    margin-inline: 65px;
     font-weight: bold;
 }
 
 .section-title .title-number {
     color: var(--primary-color);
-    margin-right: 10px;
 }
 
 .section-text {
-    margin-left: 210px;
-    margin-right: 110px;
     font-size: 25px;
     line-height: 1;
     color: var(--second-color);
+    margin-left: 5%;
 }
