--- a/css/sections.css
+++ b/css/sections.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     gap: 70px;
-    margin: 0 auto;
+    margin: 0 7.5%;
     padding: 2% 5%;
 }
 
@@ -26,5 +26,5 @@ section {
     font-size: 25px;
     line-height: 1;
     color: var(--second-color);
-    margin-left: 5%;
+    margin-inline: 5%;
 }
