--- a/css/menu.css
+++ b/css/menu.css
@@ -48,7 +48,7 @@
     background-color: var(--second-color);
     border-bottom-left-radius: 25px;
     padding: 20px;
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 15px;
     transition: right 0.3s ease;
@@ -73,6 +73,7 @@
 
 .menu.open {
     right: 0;
+    display: flex;
 }
 
 .button.open span:nth-child(1) {
